// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button component > TextArea disabled should render correctly 1`] = `
<textarea
  className="
        w-full h-full py-4 px-3.5 bg-transparent border rounded-md outline-none text-lg font-regular resize-none
        placeholder:text-gray-30
        border-gray-5 text-gray-40
        border-gray-20 focus:border-primary focus:ring focus:ring-primary/10
        false
  "
  disabled={true}
  placeholder=""
/>
`;

exports[`Button component > TextArea enabled should render correctly 1`] = `
<textarea
  className="
        w-full h-full py-4 px-3.5 bg-transparent border rounded-md outline-none text-lg font-regular resize-none
        placeholder:text-gray-30
        border-gray-20 text-gray-100
        border-gray-20 focus:border-primary focus:ring focus:ring-primary/10
        false
  "
  disabled={false}
  placeholder=""
/>
`;

exports[`Button component > TextArea enabled with accent color red should render correctly 1`] = `
<textarea
  className="
        w-full h-full py-4 px-3.5 bg-transparent border rounded-md outline-none text-lg font-regular resize-none
        placeholder:text-gray-30
        border-gray-20 text-gray-100
        false
        border-red focus:ring focus:ring-red/10
  "
  disabled={false}
  placeholder=""
/>
`;

exports[`Button component > TextArea enabled with placeholder should render correctly 1`] = `
<textarea
  className="
        w-full h-full py-4 px-3.5 bg-transparent border rounded-md outline-none text-lg font-regular resize-none
        placeholder:text-gray-30
        border-gray-20 text-gray-100
        border-gray-20 focus:border-primary focus:ring focus:ring-primary/10
        false
  "
  disabled={false}
  placeholder="Placeholder"
/>
`;
